# prolog

./: README.md  prolog.cabal
main/: Main.hs
src/Prolog/: Parser.hs  Prolog.hs
