name:          prolog
version:       0.0
stability:     Experimental
build-type:    Simple
cabal-version: >=1.14


library
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ==4.*,
        parsec
    hs-source-dirs:   src
    exposed-modules:
        Prolog.Prolog,
        Prolog.Parser


executable PrologExample
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ==4.*,
        parsec,
        prolog
    hs-source-dirs:   main
    main-is:          Main.hs

